--- a/Bell/Bell.csproj
+++ b/Bell/Bell.csproj
@@ -4,6 +4,9 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
     <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
+  <ItemGroup>
+    <Content Include="Notes.txt" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Quantum.Canon" Version="0.4.1901.3104" />
